# CVM

./: Cargo.toml  LICENSE  README.md  TODO.md  other.cvm  out.s  simple.cvm  test.c  test.cvm  wtf.cvm
docs/: README.md  ebnf.md  errors.md  macros.md  speed.md  type_inference.md  type_punning.md
docs/mips/: README.md  mips_directives.md  mips_pseudo_instructions.md
proposals/: README.md
src/: bytecode_transpiler.rs  c_transpiler.rs  lib.rs  logger.rs  main.rs
src/compiler/: ast.rs  lexer.rs  mod.rs  parser.rs  scope.rs  type_check.rs  type_infer.rs
src/interpreter/: README.md  formal.md  guide.md  mod.rs
src/mips/: README.md  mod.rs  parser.rs
src/mips/modules/: mod.rs
src/mips/modules/mips32_v6/: mod.rs
src/mips/modules/spim/: mod.rs
tests/: c_transpiler_tests.rs  misc_tests.rs  unification_tests.rs
theory_crafting/: README.md  allocator.md  core.md  modules.md  shebang.md  std.md  structs.md  types.md
