[package]
name = "cvm"
version = "0.1.0"
authors = ["braedonww@gmail.com <braedonww@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cvm_lib"
path = "src/lib.rs"

[[bin]]
name = "cvm"
path = "src/main.rs"

[dependencies]
tui = "0.7.0"
clap = "2.33.0"
log = "0.4"
simple_logger = "1.3.0"
enum-as-inner = "0.3.0"
